--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,7 +1,10 @@
 <div class="container mt-4">
   <h2 class="text-center" style="color: #F8DD00;">Gerenciamento de Tarefas</h2>
   <div class="d-flex justify-content-between align-items-center mb-3">
-    <button class="btn btn-primary" (click)="openModal()">Adicionar Tarefa</button>
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#taskModal">
+      Adicionar Nova Tarefa
+    </button>
+    </div>
     <div class="form-group">
       <select class="form-control" [(ngModel)]="filterStatus" (change)="applyFilter()">
         <option value="">Todos os Status</option>
@@ -10,36 +13,228 @@
         <option value="COMPLETED">Concluído</option>
       </select>
     </div>
-  </div>
-  <table class="table table-striped table-bordered">
-    <thead class="thead-dark">
-      <tr>
-        <th>Título</th>
-        <th>Descrição</th>
-        <th>Status</th>
-        <th>Data de Criação</th>
-        <th>Deadline</th>
-        <th>Ações</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let task of paginatedTasks">
-        <td>{{ task.title }}</td>
-        <td>{{ task.description }}</td>
-        <td>{{ task.status }}</td>
-        <td>{{ task.creationDate | date }}</td>
-        <td>{{ task.deadline | date }}</td>
-        <td>
-          <button class="btn btn-warning btn-sm" (click)="editTask(task)">Editar</button>
-          <button class="btn btn-danger btn-sm" (click)="deleteTask(task.id)">Excluir</button>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-  <!-- <pagination
-    [totalItems]="tasks.length"
-    [(ngModel)]="currentPage"
-    [itemsPerPage]="itemsPerPage"
-    (pageChanged)="onPageChange($event)">
-  </pagination> -->
 </div>
+
+  <!-- Modal Cadastro -->
+  <div class="modal fade" id="taskModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="taskModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="taskModalLabel">Cadastro de Nova Tarefa</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <!-- Formulário para a tarefa -->
+          <form #taskForm="ngForm">
+            <div class="mb-3">
+              <label for="title" class="form-label">Título</label>
+              <input type="text" id="title" name="title" class="form-control" [(ngModel)]="newTask.title" required />
+            </div>
+            <div class="mb-3">
+              <label for="description" class="form-label">Descrição</label>
+              <textarea id="description" name="description" class="form-control" [(ngModel)]="newTask.description" rows="3" required></textarea>
+            </div>
+            <div class="mb-3">
+              <label for="status" class="form-label">Status</label>
+              <select id="status" name="status" class="form-select" [(ngModel)]="newTask.status" required>
+                <option value="PENDING">Pendente</option>
+                <option value="IN_PROGRESS">Em Progresso</option>
+                <option value="COMPLETED">Concluída</option>
+              </select>
+            </div>
+            <div class="mb-3">
+              <label for="deadline" class="form-label">Prazo</label>
+              <input type="date" id="deadline" name="deadline" class="form-control" [(ngModel)]="newTask.deadline" required />
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+          <button type="button" class="btn btn-primary" [disabled]="!taskForm.valid" (click)="addTask()">Salvar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- lista  -->
+  <div class="container mt-4">
+    <h3 class="text-primary text-center mb-4">Lista de Tarefas</h3>
+    <div class="table-responsive">
+      <table class="table table-hover align-middle">
+        <thead class="table-dark text-center">
+          <tr>
+            <th>ID</th>
+            <th>Título</th>
+            <th>Descrição</th>
+            <th>Status</th>
+            <th>Data de Criação</th>
+            <th>Deadline</th>
+            <th>Ações</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let task of paginatedTasks" class="text-center">
+            <td>{{ task.id }}</td>
+            <td>{{ task.title }}</td>
+            <td>{{ task.description }}</td>
+            <td>
+              <span
+                [ngClass]="{
+                  'badge bg-success': task.status === 'COMPLETED',
+                  'badge bg-warning text-dark': task.status === 'IN_PROGRESS',
+                  'badge bg-danger': task.status === 'PENDING'
+                }"
+                >{{ task.status }}</span
+              >
+            </td>
+            <td>{{ task.creationDate | date: 'short' }}</td>
+            <td>{{ task.deadline | date: 'short' }}</td>
+            <td>
+              <button
+                class="btn btn-warning btn-sm rounded-pill me-2 btn-shadow"
+                (click)="openEditModal(task)">
+                Editar
+              </button>
+              <button
+              class="btn btn-danger btn-sm rounded-pill btn-shadow"
+              (click)="openDeleteModal(task.id)">
+              Excluir
+            </button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
+    <div class="d-flex justify-content-between align-items-center mt-3">
+      <button
+        class="btn btn-secondary btn-sm rounded-pill btn-shadow"
+        (click)="goToPreviousPage()"
+        [disabled]="currentPage === 1"
+      >
+        Página Anterior
+      </button>
+      <span class="fw-bold text-primary">Página {{ currentPage }}</span>
+      <button
+        class="btn btn-secondary btn-sm rounded-pill btn-shadow"
+        (click)="goToNextPage()"
+        [disabled]="currentPage * itemsPerPage >= tasks.length"
+      >
+        Próxima Página
+      </button>
+    </div>
+  </div>
+
+    <!-- Modal de Edição -->
+    <div class="modal fade"
+    id="editTaskModal"
+    tabindex="-1"
+    aria-labelledby="editTaskModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="editTaskModalLabel">Editar Tarefa</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form>
+            <div class="mb-3">
+              <label for="editTitle" class="form-label">Título</label>
+              <input
+                type="text"
+                class="form-control"
+                id="editTitle"
+                [(ngModel)]="selectedTask.title"
+                name="editTitle"
+              />
+            </div>
+            <div class="mb-3">
+              <label for="editDescription" class="form-label">Descrição</label>
+              <textarea
+                class="form-control"
+                id="editDescription"
+                [(ngModel)]="selectedTask.description"
+                name="editDescription"
+              ></textarea>
+            </div>
+            <div class="mb-3">
+              <label for="editStatus" class="form-label">Status</label>
+              <select
+                class="form-select"
+                id="editStatus"
+                [(ngModel)]="selectedTask.status"
+                name="editStatus"
+              >
+                <option value="PENDING">Pendente</option>
+                <option value="IN_PROGRESS">Em Progresso</option>
+                <option value="COMPLETED">Concluída</option>
+              </select>
+            </div>
+            <div class="mb-3">
+              <label for="editDeadline" class="form-label">Prazo</label>
+              <input
+                type="date"
+                class="form-control"
+                id="editDeadline"
+                [(ngModel)]="selectedTask.deadline"
+                name="editDeadline"
+              />
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+            Cancelar
+          </button>
+          <button type="button" class="btn btn-primary" (click)="updateTask()">
+            Salvar
+          </button>
+        </div>
+      </div>
+    </div>
+    </div>
+
+    <!-- Modal de Exclusão -->
+    <div
+    class="modal fade"
+    id="deleteTaskModal"
+    data-bs-backdrop="static"
+    data-bs-keyboard="false"
+    tabindex="-1"
+    aria-labelledby="deleteTaskModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="deleteTaskModalLabel">Confirmar Exclusão</h5>
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="modal"
+            aria-label="Close"
+          ></button>
+        </div>
+        <div class="modal-body">
+          Tem certeza que deseja excluir esta tarefa?
+        </div>
+        <div class="modal-footer">
+          <button
+            type="button"
+            class="btn btn-secondary"
+            data-bs-dismiss="modal"
+          >
+            Cancelar
+          </button>
+          <button
+            type="button"
+            class="btn btn-danger"
+            (click)="deleteTask(deleteTaskId)"
+            data-bs-dismiss="modal"
+          >
+            Excluir
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
