[BTM0003] Ajuste no filtro das task.

--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -56,74 +56,76 @@
     </div>
   </div>
 
-  <!-- lista  -->
-  <div class="container mt-4">
-    <h3 class="text-primary text-center mb-4">Lista de Tarefas</h3>
-    <div class="table-responsive">
-      <table class="table table-hover align-middle">
-        <thead class="table-dark text-center">
-          <tr>
-            <th>ID</th>
-            <th>Título</th>
-            <th>Descrição</th>
-            <th>Status</th>
-            <th>Data de Criação</th>
-            <th>Deadline</th>
-            <th>Ações</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let task of paginatedTasks" class="text-center">
-            <td>{{ task.id }}</td>
-            <td>{{ task.title }}</td>
-            <td>{{ task.description }}</td>
-            <td>
-              <span
-                [ngClass]="{
-                  'badge bg-success': task.status === 'COMPLETED',
-                  'badge bg-warning text-dark': task.status === 'IN_PROGRESS',
-                  'badge bg-danger': task.status === 'PENDING'
-                }"
-                >{{ task.status }}</span
-              >
-            </td>
-            <td>{{ task.creationDate | date: 'short' }}</td>
-            <td>{{ task.deadline | date: 'short' }}</td>
-            <td>
-              <button
-                class="btn btn-warning btn-sm rounded-pill me-2 btn-shadow"
-                (click)="openEditModal(task)">
-                Editar
-              </button>
-              <button
+  <!-- Lista de Tarefas -->
+<div class="container mt-4">
+  <h3 class="text-primary text-center mb-4">Lista de Tarefas</h3>
+  <div class="table-responsive">
+    <table class="table table-hover align-middle">
+      <thead class="table-dark text-center">
+        <tr>
+          <th>ID</th>
+          <th>Título</th>
+          <th>Descrição</th>
+          <th>Status</th>
+          <th>Data de Criação</th>
+          <th>Deadline</th>
+          <th>Ações</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let task of filteredTasks" class="text-center">
+          <td>{{ task.id }}</td>
+          <td>{{ task.title }}</td>
+          <td>{{ task.description }}</td>
+          <td>
+            <span
+              [ngClass]="{
+                'badge bg-success': task.status === 'COMPLETED',
+                'badge bg-warning text-dark': task.status === 'IN_PROGRESS',
+                'badge bg-danger': task.status === 'PENDING'
+              }"
+              >{{ task.status }}</span
+            >
+          </td>
+          <td>{{ task.creationDate | date: 'short' }}</td>
+          <td>{{ task.deadline | date: 'short' }}</td>
+          <td>
+            <button
+              class="btn btn-warning btn-sm rounded-pill me-2 btn-shadow"
+              (click)="openEditModal(task)"
+            >
+              Editar
+            </button>
+            <button
               class="btn btn-danger btn-sm rounded-pill btn-shadow"
-              (click)="openDeleteModal(task.id)">
+              (click)="openDeleteModal(task.id)"
+            >
               Excluir
             </button>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-
-    <div class="d-flex justify-content-between align-items-center mt-3">
-      <button
-        class="btn btn-secondary btn-sm rounded-pill btn-shadow"
-        (click)="goToPreviousPage()"
-        [disabled]="currentPage === 1"
-      >
-        Página Anterior
-      </button>
-      <span class="fw-bold text-primary">Página {{ currentPage }}</span>
-      <button
-        class="btn btn-secondary btn-sm rounded-pill btn-shadow"
-        (click)="goToNextPage()"
-        [disabled]="currentPage * itemsPerPage >= tasks.length"
-      >
-        Próxima Página
-      </button>
-    </div>
+          </td>
+        </tr>
+      </tbody>
+    </table>
   </div>
+
+  <div class="d-flex justify-content-between align-items-center mt-3">
+    <button
+      class="btn btn-secondary btn-sm rounded-pill btn-shadow"
+      (click)="goToPreviousPage()"
+      [disabled]="currentPage === 1"
+    >
+      Página Anterior
+    </button>
+    <span class="fw-bold text-primary">Página {{ currentPage }}</span>
+    <button
+      class="btn btn-secondary btn-sm rounded-pill btn-shadow"
+      (click)="goToNextPage()"
+      [disabled]="currentPage * itemsPerPage >= tasks.length"
+    >
+      Próxima Página
+    </button>
+  </div>
+</div>
 
     <!-- Modal de Edição -->
     <div class="modal fade"
