[BTM0004] Finalizando o projeto realizando as conexões ao back.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-tasks></app-tasks>
+<!-- <app-login></app-login> -->
+<!-- <app-tasks></app-tasks> -->
+ <!-- <app-register></app-register> -->
+ <router-outlet></router-outlet>
