--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,1 +1,21 @@
-<p>login works!</p>
+
+<div class="container d-flex justify-content-center align-items-center vh-100">
+  <div class="card p-4 w-50 text-center">
+    <img src="assets/logo.png" alt="Logo" class="mb-3" width="150" />
+    <h3 class="text-primary">Acesse sua conta</h3>
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+      <div class="mb-3">
+        <input type="text" class="form-control" placeholder="Usuário" formControlName="username" />
+      </div>
+      <div class="mb-3">
+        <input type="password" class="form-control" placeholder="Senha" formControlName="password" />
+      </div>
+      <button type="submit" class="btn btn-primary w-100" [disabled]="loginForm.invalid">Entrar</button>
+      <p *ngIf="errorMessage" class="text-danger mt-2">{{ errorMessage }}</p>
+    </form>
+    <hr />
+    <button class="btn btn-secondary w-100 mt-2" [routerLink]="'/register'">Criar Conta</button>
+
+  </div>
+</div>
+
