[BTM0005] Ajustando o front e suas API.

--- a/src/app/tasks/tasks-list/tasks-list.component.html
+++ b/src/app/tasks/tasks-list/tasks-list.component.html
@@ -33,8 +33,8 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let task of filteredTasks" class="text-center">
-          <td>{{ task.id }}</td>
+        <tr *ngFor="let task of tasks" class="text-center">
+          <td>{{ task.id}}</td>
           <td>{{ task.title }}</td>
           <td>{{ task.description }}</td>
           <td>
@@ -59,7 +59,7 @@
             </button>
             <button
               class="btn btn-danger btn-sm rounded-pill btn-shadow"
-              (click)="openDeleteModal(task.id)"
+              (click)="openEditModal(task.id)"
             >
               Excluir
             </button>
@@ -87,4 +87,118 @@
       Próxima Página
     </button>
   </div>
+</div>
+
+<!-- Modal de Edição -->
+<div class="modal fade"
+id="editTaskModal"
+tabindex="-1"
+aria-labelledby="editTaskModalLabel"
+aria-hidden="true">
+<div class="modal-dialog">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h5 class="modal-title" id="editTaskModalLabel">Editar Tarefa</h5>
+      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+    </div>
+    <div class="modal-body">
+      <form>
+        <div class="mb-3">
+          <label for="editTitle" class="form-label">Título</label>
+          <input
+            type="text"
+            class="form-control"
+            id="editTitle"
+            [(ngModel)]="selectedTask.title"
+            name="editTitle"
+          />
+        </div>
+        <div class="mb-3">
+          <label for="editDescription" class="form-label">Descrição</label>
+          <textarea
+            class="form-control"
+            id="editDescription"
+            [(ngModel)]="selectedTask.description"
+            name="editDescription"
+          ></textarea>
+        </div>
+        <div class="mb-3">
+          <label for="editStatus" class="form-label">Status</label>
+          <select
+            class="form-select"
+            id="editStatus"
+            [(ngModel)]="selectedTask.status"
+            name="editStatus"
+          >
+            <option value="PENDING">Pendente</option>
+            <option value="IN_PROGRESS">Em Progresso</option>
+            <option value="COMPLETED">Concluída</option>
+          </select>
+        </div>
+        <div class="mb-3">
+          <label for="editDeadline" class="form-label">Prazo</label>
+          <input
+            type="date"
+            class="form-control"
+            id="editDeadline"
+            [(ngModel)]="selectedTask.deadline"
+            name="editDeadline"
+          />
+        </div>
+      </form>
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+        Cancelar
+      </button>
+      <button type="button" class="btn btn-primary" (click)="updateTask()">
+        Salvar
+      </button>
+    </div>
+  </div>
+</div>
+</div>
+
+<!-- Modal de Exclusão -->
+<div
+class="modal fade"
+id="deleteTaskModal"
+data-bs-backdrop="static"
+data-bs-keyboard="false"
+tabindex="-1"
+aria-labelledby="deleteTaskModalLabel"
+aria-hidden="true">
+<div class="modal-dialog">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h5 class="modal-title" id="deleteTaskModalLabel">Confirmar Exclusão</h5>
+      <button
+        type="button"
+        class="btn-close"
+        data-bs-dismiss="modal"
+        aria-label="Close"
+      ></button>
+    </div>
+    <div class="modal-body">
+      Tem certeza que deseja excluir esta tarefa?
+    </div>
+    <div class="modal-footer">
+      <button
+        type="button"
+        class="btn btn-secondary"
+        data-bs-dismiss="modal"
+      >
+        Cancelar
+      </button>
+      <button
+        type="button"
+        class="btn btn-danger"
+        (click)="deleteTask(deleteTaskId)"
+        data-bs-dismiss="modal"
+      >
+        Excluir
+      </button>
+    </div>
+  </div>
+</div>
 </div>
