--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -92,14 +92,12 @@
           <td>
             <button
               class="btn btn-warning btn-sm rounded-pill me-2 btn-shadow"
-              (click)="openEditModal(task)"
-            >
+              (click)="openEditModal(task)">
               Editar
             </button>
             <button
               class="btn btn-danger btn-sm rounded-pill btn-shadow"
-              (click)="openDeleteModal(task.id)"
-            >
+              (click)="openDeleteModal(task.id)">
               Excluir
             </button>
           </td>
